# agentic-sdlc-wizard

./: .gitignore  .waza.yaml  README.md  Taskfile.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: eval.yml
evals/_probe/: TOOL_NAMES.md  probe-bash.yaml  probe-create.yaml  probe-edit.yaml  probe-skill.yaml  probe-web.yaml
evals/_shared/: budgets.md
evals/docs-sync/: eval.yaml  results.json  trigger_tests.yaml
evals/jira-fetch/: CHANGELOG.md  ablation-report.md  eval.yaml  results.json  trigger_tests.yaml
evals/sdlc-council/: eval.yaml  results.json  trigger_tests.yaml
evals/sdlc-council-critic/: eval.yaml  trigger_tests.yaml
evals/sdlc-council-daedalus/: CHANGELOG.md  eval.yaml  results.json  trigger_tests.yaml
evals/sdlc-council-hephaestus/: eval.yaml  results.json  trigger_tests.yaml
evals/sdlc-council-lucas/: eval.yaml  results.json
evals/sdlc-council-sherlock/: CHANGELOG.md  eval.yaml  results.json  trigger_tests.yaml
evals/sdlc-devcontainer-setup/: eval.yaml  results.json  trigger_tests.yaml
evals/sdlc-graphify-setup/: eval.yaml  results.json  trigger_tests.yaml
examples/: compare-test-input.md
ideas/: openspec.md
scripts/: generate_jira_fetch_report.py
src/: cli.js  config.js
templates/: .env.sample
test/: commands.test.js  config.test.js  hybrid-proxy.test.js  install.test.js  source-repo.test.js  source-ticket.test.js
tests/: commands.test.js  config.test.js  test_commands.py  test_config.py
wizard/: __init__.py  cli.py  config.py
wizard/templates/mcps/bitbucket-mcp/: pyproject.toml
wizard/templates/mcps/bitbucket-mcp/bitbucket_mcp/: __init__.py  __main__.py  server.py
wizard/templates/mcps/brave-search-mcp/: pyproject.toml
wizard/templates/mcps/brave-search-mcp/brave_search_mcp/: __init__.py  __main__.py
(+216 files in other folders)
