[project]
name = "agentic-sdlc-wizard"
version = "1.0.0"
description = "Agentic SDLC Wizard - Install and configure AI agents, prompts, and MCP servers for your IDE"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agentic", "sdlc", "wizard", "copilot", "agents", "mcp", "vscode", "antigravity"]
dependencies = [
    "inquirerpy>=0.3.4",
]

[project.scripts]
wizard = "wizard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wizard"]

[tool.hatch.build.targets.wheel.force-include]
"wizard/templates" = "wizard/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
