[project]
name = "bitbucket-mcp"
version = "1.0.0"
description = "Bitbucket MCP server for agentic SDLC"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mcp]
name = "bitbucket-mcp"

[[tool.mcp.env]]
name = "BITBUCKET_URL"
description = "Bitbucket server URL"
required = true

[[tool.mcp.env]]
name = "BITBUCKET_TOKEN"
description = "Bitbucket personal access token"
required = true

[[tool.mcp.env]]
name = "BITBUCKET_USERNAME"
description = "Bitbucket username"
required = false
