[project]
name = "brave-search-mcp"
version = "1.0.0"
description = "Brave Search MCP server for agentic SDLC"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mcp]
name = "brave-search-mcp"

[[tool.mcp.env]]
name = "BRAVE_API_KEY"
description = "Brave Search API key"
required = true
